# ExamplePlugin

./: CMakeLists.txt  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
src/: PCH.h  main.cpp
